DDD News						-*- text -*-
********

DDD 3.2.1
=========

DDD 3.2.1 includes minor bug fixes and major LessTif bug workarounds.

- [LessTif] Helpers (such as uncompressing the DDD manual) works fine.
- [LessTif] The `Print' dialog (esp. printing to file) works fine.
- [LessTif] Restarting DDD (while saving settings) works fine.
- [LessTif] Small fixes for building with LessTif on SGI.
- [Perl] In the data display, Perl hash keys are properly quoted.
- Minor bugs with clustered displays have been fixed.
- DDD PostScript documentation can be printed on multiple pages per sheet.


DDD 3.2
=======

DDD 3.2 brings a new documentation and several minor improvements.


DDD is now a GNU program
------------------------

- Starting with this release, DDD is an official GNU program,
  distributed by the Free Software Foundation.  This brings a number of
  administrative changes:

  * DDD is distributed as source only using GNU FTP sites and mirrors.
  
  * The DDD WWW page is now `http://www.gnu.org/software/ddd/'.
  
  * The DDD mailing addresses are now `bug-ddd@gnu.org' (for bug reports) 
    and `ddd@gnu.org' (for announcements, discussions, or anything else).
  
    You can subscribe to these lists by sending an e-mail to
    `bug-ddd-request@gnu.org' and `ddd-request@gnu.org', respectively.

  The old mailing list addresses are now just aliases for the new ones.


Documentation
-------------

- There is a new DDD manual, generated from Texinfo source, and coming
  in HTML, PDF, PostScript, Info, as well as plain text format.


Debuggers and Languages
-----------------------

- This release contains partial support for DEC's `ladebug' debugger.
  Please send in bug reports listing remaining problems.

- Parsing of JDB data has been improved.

- DBX prompts for object file names are recognized.


User Interface
--------------

- `Breakpoint Properties', `Define Command', and `Debugger Settings'
  have an `Apply' button that applies changes to text fields.
