@@ -4,13 +4,14 @@ DDD News						-*- text -*-
 DDD 3.2.1
 =========
 
-DDD 3.2.1 includes minor bug fixes and major LessTif bug workarounds.
+DDD 3.2.1 brings some minor bug fixes and major LessTif bug workarounds.
 
 - [LessTif] Helpers (such as uncompressing the DDD manual) works fine.
 - [LessTif] The `Print' dialog (esp. printing to file) works fine.
 - [LessTif] Restarting DDD (while saving settings) works fine.
 - [LessTif] Small fixes for building with LessTif on SGI.
 - [Perl] In the data display, Perl hash keys are properly quoted.
+- DDD makes more attempts in locating the initial main function.
 - Minor bugs with clustered displays have been fixed.
 - DDD PostScript documentation can be printed on multiple pages per sheet.
 
